change application.yml.example to figaro file format requirements

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -1,8 +1,8 @@
 production:
   slack_webhook_url: 'https://your.slack.webhook.url'
-  smtp:
-    address: 'your.smtp.address'
-    port: 25
-    domain: 'your.smtp.damain'
-    user_name: 'your.user_name'
-    password: 'your.password'
+  slack_channel: '#your_slack_channel'
+  smtp_address: 'your.smtp.address'
+  smtp_port: '25'
+  smtp_domain: 'your.smtp.damain'
+  smtp_user_name: 'your.user_name'
+  smtp_password: 'your.password'
