Added Backbone, charts rewritten as a backbone view, translates puted in separate files related to each chart

--- a/.jshintrc
+++ b/.jshintrc
@@ -3,7 +3,10 @@
   "undef": true,
   "unused": true,
   "predef": [ 
+    "app",
+    "Highcharts",
     "Turbolinks",
+    "Backbone",
     "fail_ajax_request",
     "I18n",
     "AjaxErrorMessage",
