--- a/.jshintrc
+++ b/.jshintrc
@@ -3,7 +3,7 @@
   "undef": true,
   "unused": true,
   "predef": [ 
-    "app",
+    "Skyderby",
     "Highcharts",
     "Turbolinks",
     "Backbone",
