--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,7 @@ language: ruby
 rvm:
   - 2.2.0
   - 2.1.0
+before_script:
+  - cp config/database.travis.yml config/database.yml
+  - mysql -e 'create database skyderby_test;'
 script: bundle exec rspec spec
