--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ rvm:
 before_script:
   - cp config/database.travis.yml config/database.yml
   - mysql -e 'create database skyderby_test;'
-script: bundle exec rspec spec
+script: RAILS_ENV=test bundle exec rspec spec
