--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ rvm:
 before_script:
   - cp config/database.travis.yml config/database.yml
   - mysql -e 'create database skyderby_test;'
-script: RAILS_ENV=test bundle exec rspec spec
+  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - bundle exec rake db:test:prepare
+script: bundle exec rspec spec/
