--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: ruby
 rvm:
   - 2.2.0
   - 2.1.0
+services:
+  - redis-server
 before_script:
   - cp config/database.travis.yml config/database.yml
   - mysql -e 'create database skyderby_test;'
