--- a/nginx.conf
+++ b/nginx.conf
@@ -62,10 +62,11 @@ http {
   gzip_proxied any;
   gzip_min_length 500;
   gzip_disable "MSIE [1-6]\.";
-  gzip_types text/plain text/xml text/css
+  gzip_types text/plain text/css
+             application/json application/x-javascript
+             text/xml application/xml application/xml+rss
              text/comma-separated-values
-             text/javascript application/x-javascript
-             application/atom+xml;
+             text/javascript application/javascript;
 
   # this can be any application server, not just unicorn
   upstream app_server {
@@ -136,6 +137,11 @@ http {
       # proxy_buffering off;
 
       proxy_pass http://app_server;
+    }
+
+    location ^~ /assets/ {
+      gzip_static on;
+      expires max;
     }
 
     # Rails error pages
