--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: ruby
 rvm:
   - 2.2.0
-  - 2.1.0
 services:
   - redis-server
 before_script:
   - cp config/database.travis.yml config/database.yml
-  - mysql -e 'create database skyderby_test;'
+  - psql -c 'create database travis_ci_test;' -U postgres
   - bundle exec rake db:test:prepare
 script: bundle exec rspec spec/
