--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,23 @@
+db:
+  image: postgres:9.5.2
+  environment:
+    POSTGRES_PASSWORD: &DB_PASSWORD tracks-tracks
+    POSTGRES_USER: &DB_USERNAME tracks
+    POSTGRES_DB: &DB_NAME tracks_dev
+  ports:
+    - "5432:5432"
+  volumes_from:
+    - data-pg
+  container_name: skydebry_db
+
 app:
-  image: skyderby/app:dev
+  build: .
+  dockerfile: Dockerfile.dev
   environment: &ENV
-    DB_NAME: tracks_dev
+    DB_NAME: *DB_NAME
     DB_HOST: db
-    DB_USERNAME: tracks
-    DB_PASSWORD: tracks-tracks
+    DB_USERNAME: *DB_USERNAME
+    DB_PASSWORD: *DB_PASSWORD
   volumes:
     - ./:/opt/app
   links:
@@ -12,8 +25,11 @@ app:
     - redis
   ports:
     - "3000:3000"
+  container_name: skydebry_app
+
 workers:
-  image: skyderby/app:dev
+  build: .
+  dockerfile: Dockerfile.dev
   environment:
     <<: *ENV
   volumes:
@@ -22,25 +38,19 @@ workers:
     - db
     - redis
   command: "bundle exec sidekiq"
-db:
-  image: mysql:5.7
-  environment:
-    MYSQL_ROOT_PASSWORD: "MYSQL_ROOT_PASSWORD"
-    MYSQL_USER: "tracks"
-    MYSQL_PASSWORD: "tracks-tracks"
-    MYSQL_DATABASE: 'tracks_dev'
-  ports:
-    - "3306:3306"
-  volumes_from:
-    - data-mysql
+  container_name: skydebry_workers
+
 redis:
   image: redis:3.0.5
   volumes_from:
     - data-redis
-data-mysql:
+  container_name: skyderby_redis
+
+data-pg:
   image: busybox
   volumes:
-    - /var/lib/mysql
+    - /var/lib/postgresql/data
+
 data-redis:
   image: busybox
   volumes:
