--- a/nginx.conf
+++ b/nginx.conf
@@ -62,11 +62,10 @@ http {
   gzip_proxied any;
   gzip_min_length 500;
   gzip_disable "MSIE [1-6]\.";
-  gzip_types text/plain text/css
-             application/json application/x-javascript
-             text/xml application/xml application/xml+rss
+  gzip_types text/plain text/xml text/css
              text/comma-separated-values
-             text/javascript application/javascript;
+             text/javascript application/x-javascript
+             application/atom+xml;
 
   # this can be any application server, not just unicorn
   upstream app_server {
@@ -78,7 +77,26 @@ http {
   }
 
   server {
-    listen 80 default deferred; # for Linux
+    server_name staging.skyderby.ru;
+    listen 80;
+    return 301 https://staging.skyderby.ru$request_uri;
+  }
+
+  server {
+    listen 443 ssl default deferred http2; # for Linux
+    server_name staging.skyderby.ru;
+    ssl_stapling on;
+    ssl on;
+    ssl_certificate /etc/pki/nginx/staging.skyderby.ru.pem;
+    ssl_certificate_key /etc/pki/nginx/private.key;
+    ssl_dhparam /etc/pki/nginx/dhparam.pem;
+    ssl_session_timeout 24h;
+    ssl_session_cache shared:SSL:2m;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers kEECDH+AES128:kEECDH:kEDH:-3DES:kRSA+AES128:kEDH+3DES:DES-CBC3-SHA:!RC4:!aNULL:!eNULL:!MD5:!EXPORT:!LOW:!SEED:!CAMELLIA:!IDEA:!PSK:!SRP:!SSLv2;
+    ssl_prefer_server_ciphers on;
+    add_header Strict-Transport-Security "max-age=31536000;";
+    add_header Content-Security-Policy-Report-Only "default-src https:; script-src https: 'unsafe-eval' 'unsafe-inline'; style-src https: 'unsafe-inline'; img-src https: data:; font-src https: data:; report-uri /csp-report";
 
     # If you have IPv6, you'll likely want to have two separate listeners.
     # One on IPv4 only (the default), and another on IPv6 only instead
@@ -89,7 +107,6 @@ http {
     # listen [::]:80 ipv6only=on; # deferred or accept_filter recommended
 
     client_max_body_size 1G;
-    server_name _;
 
     # ~2 seconds is often enough for most folks to parse HTML/CSS and
     # retrieve needed images/icons/frames, connections are cheap in
@@ -139,15 +156,10 @@ http {
       proxy_pass http://app_server;
     }
 
-    location ^~ /assets/ {
-      gzip_static on;
-      expires max;
-    }
-
     # Rails error pages
     error_page 500 502 503 504 /500.html;
-    location = /500.html {
-      root /opt/app/public;
-    }
+    #location = /500.html {
+    #  root /opt/app/public;
+    #}
   }
 }
