--- a/docker-compose-production.yml.example
+++ b/docker-compose-production.yml.example
@@ -13,6 +13,9 @@ app:
     SMTP_USERNAME: 'i@example.ru'
     SMTP_PASSWORD: '...'
     WORKER_PROCESSES: 2
+    REDIS_HOST: redis
+    REDIS_PORT: 6379
+    REDIS_DB: 12
   volumes_from:
     - data-app
   links:
