--- a/nginx.conf
+++ b/nginx.conf
@@ -77,9 +77,9 @@ http {
   }
 
   server {
-    server_name staging.skyderby.ru;
+    server_name skyderby.ru;
     listen 80;
-    return 301 https://staging.skyderby.ru$request_uri;
+    return 301 https://skyderby.ru$request_uri;
   }
 
   server {
@@ -87,7 +87,7 @@ http {
     server_name staging.skyderby.ru;
     ssl_stapling on;
     ssl on;
-    ssl_certificate /etc/pki/nginx/staging.skyderby.ru.pem;
+    ssl_certificate /etc/pki/nginx/skyderby.ru.pem;
     ssl_certificate_key /etc/pki/nginx/private.key;
     ssl_dhparam /etc/pki/nginx/dhparam.pem;
     ssl_session_timeout 24h;
