reduced client max body size

--- a/nginx.conf
+++ b/nginx.conf
@@ -106,7 +106,7 @@ http {
     # some software.
     # listen [::]:80 ipv6only=on; # deferred or accept_filter recommended
 
-    client_max_body_size 1G;
+    client_max_body_size 10m;
 
     # ~2 seconds is often enough for most folks to parse HTML/CSS and
     # retrieve needed images/icons/frames, connections are cheap in
