--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,60 +1,61 @@
-db:
-  image: postgres:9.5.2
-  environment:
-    POSTGRES_PASSWORD: &DB_PASSWORD tracks-tracks
-    POSTGRES_USER: &DB_USERNAME tracks
-    POSTGRES_DB: &DB_NAME tracks_dev
-  ports:
-    - "5432:5432"
-  volumes_from:
-    - data-pg
-  container_name: skydebry_db
+version: '2'
 
-app:
-  build: .
-  dockerfile: Dockerfile.dev
-  environment: &ENV
-    DB_NAME: *DB_NAME
-    DB_HOST: db
-    DB_USERNAME: *DB_USERNAME
-    DB_PASSWORD: *DB_PASSWORD
-    REDIS_HOST: redis
-    REDIS_PORT: 6379
-    REDIS_DB: 12
-  volumes:
-    - ./:/opt/app
-  links:
-    - db
-    - redis
-  ports:
-    - "3000:3000"
-  container_name: skydebry_app
+services:
+  db:
+    image: postgres:9.5.2
+    environment:
+      POSTGRES_PASSWORD: &DB_PASSWORD tracks-tracks
+      POSTGRES_USER: &DB_USERNAME skyderby
+      POSTGRES_DB: &DB_NAME skyderby
+    ports:
+      - "5432:5432"
+    volumes:
+    - data_pg:/var/lib/postgresql/data
+    container_name: skyderby_db
 
-workers:
-  build: .
-  dockerfile: Dockerfile.dev
-  environment:
-    <<: *ENV
-  volumes:
-    - ./:/opt/app
-  links:
-    - db
-    - redis
-  command: "bundle exec sidekiq"
-  container_name: skydebry_workers
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    environment: &ENV
+      DB_NAME: *DB_NAME
+      DB_HOST: db
+      DB_USERNAME: *DB_USERNAME
+      DB_PASSWORD: *DB_PASSWORD
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      REDIS_DB: 12
+    volumes:
+      - ./:/opt/app
+    links:
+      - db
+      - redis
+    ports:
+      - "3000:3000"
+    container_name: skyderby_app
 
-redis:
-  image: redis:3.0.5
-  volumes_from:
-    - data-redis
-  container_name: skyderby_redis
+  workers:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    environment:
+      <<: *ENV
+    volumes:
+      - ./:/opt/app
+    links:
+      - db
+      - redis
+    command: "bundle exec sidekiq"
+    container_name: skydebry_workers
 
-data-pg:
-  image: busybox
-  volumes:
-    - /var/lib/postgresql/data
+  redis:
+    image: redis:3.0.5
+    volumes:
+      - data_redis:/data
+    container_name: skyderby_redis
 
-data-redis:
-  image: busybox
-  volumes:
-    - /data
+volumes:
+  data_pg:
+    external: true
+  data_redis:
+    external: true
