--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 cache: bundler
 rvm:
-  - 2.2.0
+  - 2.3.0
 env:
   REDIS_HOST: localhost
   REDIS_PORT: 6379
@@ -13,3 +13,5 @@ before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
   - bundle exec rake db:test:prepare
 script: bundle exec rspec spec/
+after_success:
+  - bundle exec codeclimate-test-reporter
