fixed i18n-js config

--- a/config/i18n-js.yml
+++ b/config/i18n-js.yml
@@ -29,13 +29,5 @@
 fallbacks: :en
 
 translations:
-  only: 
-    - '*.events.show.*'
-    - '*.tracks.form.*'
-    - '*.tracks.edit.*'
-    - '*.tracks.show.*'
-    - '*.places.index.*'
-    - '*.units.*'
-    - '*.charts.*'
-    - '*.errors.messages.*'
-    - '*.jquery_validate.*'
+  - file: "app/assets/javascripts/i18n/translations.js"
+    only: ['*.events.show.*', '*.tracks.form.*', '*.tracks.edit.*', '*.tracks.show.*', '*.places.index.*', '*.units.*', '*.charts.*', '*.errors.messages.*', '*.jquery_validate.*']
