--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ DB_PASSWORD: tracks-tracks
 REDIS_HOST: 10.211.55.11
 REDIS_PORT: 6379
 REDIS_DB: 12
+MAPS_API_KEY: AIzaSyBK52NrEXWYjmGLRkKOpjndjDxuT4PuB8U
