Competitor deletion + specs

--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
-DB_NAME: skyderby
-DB_HOST: 10.211.55.11
+DB_NAME: skyderby_development
+DB_HOST: localhost
 DB_USERNAME: skyderby
-DB_PASSWORD: tracks-tracks
-REDIS_HOST: 10.211.55.11
+REDIS_HOST: localhost
 REDIS_PORT: 6379
 REDIS_DB: 12
 MAPS_API_KEY: AIzaSyBK52NrEXWYjmGLRkKOpjndjDxuT4PuB8U
