--- a/services/pg_conf/postgresql.conf
+++ b/services/pg_conf/postgresql.conf
@@ -61,7 +61,7 @@ listen_addresses = '*'
 					# defaults to 'localhost'; use '*' for all
 					# (change requires restart)
 #port = 5432				# (change requires restart)
-max_connections = 100			# (change requires restart)
+max_connections = 20			# (change requires restart)
 # Note:  Increasing max_connections costs ~400 bytes of shared memory per
 # connection slot, plus lock space (see max_locks_per_transaction).
 #superuser_reserved_connections = 3	# (change requires restart)
@@ -112,9 +112,9 @@ max_connections = 100			# (change requires restart)
 
 # - Memory -
 
-shared_buffers = 128MB			# min 128kB
+shared_buffers = 256MB			# min 128kB
 					# (change requires restart)
-#huge_pages = try			# on, off, or try
+huge_pages = try			# on, off, or try
 					# (change requires restart)
 #temp_buffers = 8MB			# min 800kB
 #max_prepared_transactions = 0		# zero disables the feature
@@ -123,8 +123,8 @@ shared_buffers = 128MB			# min 128kB
 # per transaction slot, plus lock space (see max_locks_per_transaction).
 # It is not advisable to set max_prepared_transactions nonzero unless you
 # actively intend to use prepared transactions.
-#work_mem = 4MB				# min 64kB
-#maintenance_work_mem = 64MB		# min 1MB
+work_mem = 24MB				# min 64kB
+maintenance_work_mem = 128MB		# min 1MB
 #autovacuum_work_mem = -1		# min 1MB, or -1 to use maintenance_work_mem
 #max_stack_depth = 2MB			# min 100kB
 dynamic_shared_memory_type = posix	# the default is the first option
@@ -144,7 +144,11 @@ dynamic_shared_memory_type = posix	# the default is the first option
 
 #max_files_per_process = 1000		# min 25
 					# (change requires restart)
-#shared_preload_libraries = ''		# (change requires restart)
+shared_preload_libraries = 'pg_stat_statements'
+
+# pg_stat_statements
+pg_stat_statements.max = 1000
+pg_stat_statements.track = top
 
 # - Cost-Based Vacuum Delay -
 
@@ -174,8 +178,8 @@ dynamic_shared_memory_type = posix	# the default is the first option
 
 wal_level = hot_standby			# minimal, archive, hot_standby, or logical
 					# (change requires restart)
-#fsync = on				# turns forced synchronization on or off
-#synchronous_commit = on		# synchronization level;
+fsync = on				# turns forced synchronization on or off
+synchronous_commit = off		# synchronization level;
 					# off, local, remote_write, or on
 #wal_sync_method = fsync		# the default is the first option
 					# supported by the operating system:
@@ -188,7 +192,7 @@ wal_level = hot_standby			# minimal, archive, hot_standby, or logical
 #wal_compression = off			# enable compression of full-page writes
 #wal_log_hints = off			# also do full page writes of non-critical updates
 					# (change requires restart)
-#wal_buffers = -1			# min 32kB, -1 sets based on shared_buffers
+wal_buffers = 16MB			# min 32kB, -1 sets based on shared_buffers
 					# (change requires restart)
 #wal_writer_delay = 200ms		# 1-10000 milliseconds
 
@@ -198,9 +202,9 @@ wal_level = hot_standby			# minimal, archive, hot_standby, or logical
 # - Checkpoints -
 
 #checkpoint_timeout = 5min		# range 30s-1h
-#max_wal_size = 1GB
-#min_wal_size = 80MB
-#checkpoint_completion_target = 0.5	# checkpoint target duration, 0.0 - 1.0
+max_wal_size = 2GB
+min_wal_size = 1GB
+checkpoint_completion_target = 0.7	# checkpoint target duration, 0.0 - 1.0
 #checkpoint_warning = 30s		# 0 disables
 
 # - Archiving -
@@ -286,11 +290,11 @@ wal_keep_segments = 64		# in logfile segments, 16MB each; 0 disables
 # - Planner Cost Constants -
 
 #seq_page_cost = 1.0			# measured on an arbitrary scale
-#random_page_cost = 4.0			# same scale as above
+random_page_cost = 1.1			# same scale as above
 #cpu_tuple_cost = 0.01			# same scale as above
 #cpu_index_tuple_cost = 0.005		# same scale as above
 #cpu_operator_cost = 0.0025		# same scale as above
-#effective_cache_size = 4GB
+effective_cache_size = 1GB
 
 # - Genetic Query Optimizer -
 
@@ -398,7 +402,7 @@ wal_keep_segments = 64		# in logfile segments, 16MB each; 0 disables
 					#   fatal
 					#   panic (effectively off)
 
-#log_min_duration_statement = -1	# -1 is disabled, 0 logs all statements
+log_min_duration_statement = 3000	# -1 is disabled, 0 logs all statements
 					# and their durations, > 0 logs only
 					# statements running at least this number
 					# of milliseconds
@@ -480,19 +484,19 @@ track_counts = on
 
 autovacuum = on				# Enable autovacuum subprocess?  'on'
 					# requires track_counts to also be on.
-#log_autovacuum_min_duration = -1	# -1 disables, 0 logs all actions and
+log_autovacuum_min_duration = 1000	# -1 disables, 0 logs all actions and
 					# their durations, > 0 logs only
 					# actions running at least this number
 					# of milliseconds.
 #autovacuum_max_workers = 3		# max number of autovacuum subprocesses
 					# (change requires restart)
-#autovacuum_naptime = 1min		# time between autovacuum runs
-#autovacuum_vacuum_threshold = 50	# min number of row updates before
+autovacuum_naptime = 1min		# time between autovacuum runs
+autovacuum_vacuum_threshold = 300	# min number of row updates before
 					# vacuum
-#autovacuum_analyze_threshold = 50	# min number of row updates before
+autovacuum_analyze_threshold = 200	# min number of row updates before
 					# analyze
-#autovacuum_vacuum_scale_factor = 0.2	# fraction of table size before vacuum
-#autovacuum_analyze_scale_factor = 0.1	# fraction of table size before analyze
+autovacuum_vacuum_scale_factor = 0.002	# fraction of table size before vacuum
+autovacuum_analyze_scale_factor = 0.0005 # fraction of table size before analyze
 #autovacuum_freeze_max_age = 200000000	# maximum XID age before forced vacuum
 					# (change requires restart)
 #autovacuum_multixact_freeze_max_age = 400000000	# maximum multixact age
