add track-scanner adapter, refresh range button

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ REDIS_PORT: 6379
 REDIS_DB: 12
 MAPS_API_KEY: AIzaSyBK52NrEXWYjmGLRkKOpjndjDxuT4PuB8U
 HONEYBADGER_API_KEY: 'your_key'
+TRACK_SCANNER_URL: http://track-scanner.herokuapp.com
