--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,8 +5,9 @@ Rails:
   Enabled: true
 
 AllCops:
-  TargetRubyVersion: 2.3
+  TargetRubyVersion: 2.4
   Exclude:
+    - db/schema.rb
     - lib/**/*
 
 #################### Style   ###############################
