--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: ruby
 
+sudo: required
+
 cache: bundler
 
 rvm:
@@ -7,6 +9,7 @@ rvm:
 
 addons:
   postgresql: '9.6'
+  chrome: stable
 
 env:
   REDIS_HOST: localhost
@@ -19,12 +22,11 @@ services:
   - redis-server
 
 before_install:
-  - "phantomjs --version"
-  - "mkdir travis-phantomjs && PHANTOM_EXISTS=false"
-  - "if [ $PHANTOM_EXISTS = 'false' ]; then wget https://assets.membergetmember.co/software/phantomjs-2.1.1-linux-x86_64.tar.bz2 -O $PWD/travis-phantomjs/phantomjs-2.1.1-linux-x86_64.tar.bz2; fi"
-  - "if [ $PHANTOM_EXISTS = 'false' ]; then tar -xvf $PWD/travis-phantomjs/phantomjs-2.1.1-linux-x86_64.tar.bz2 -C $PWD/travis-phantomjs; fi"
-  - "export PATH=$PWD/travis-phantomjs/phantomjs-2.1.1-linux-x86_64/bin:$PATH"
-  - "phantomjs --version"
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+  - wget http://chromedriver.storage.googleapis.com/2.34/chromedriver_linux64.zip
+  - unzip chromedriver_linux64.zip
+  - sudo cp chromedriver /usr/local/bin/.
+  - sudo chmod +x /usr/local/bin/chromedriver
 
 before_script:
   - cp config/database.travis.yml config/database.yml
