--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,8 @@
 # Ignore application configuration
 /config/application.yml
 node_modules
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
