--- a/.gitignore
+++ b/.gitignore
@@ -36,9 +36,9 @@
 
 # Ignore application configuration
 /config/application.yml
-node_modules
 /public/packs
 /public/packs-test
 /node_modules
 yarn-debug.log*
 .yarn-integrity
+yarn-error.log
