--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "bootstrap-datepicker": "^1.7.1",
     "highcharts": "^6.0.7",
     "jquery": "^3.3.1",
+    "jquery-validation": "^1.17.0",
     "rails-ujs": "^5.1.5",
     "select2": "^4.0.3",
     "stimulus": "^1.0.1",
