--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ language: ruby
 
 sudo: required
 
-cache: bundler
+cache:
+  bundler: true
+  directories:
+    - node_modules
 
 rvm:
   - 2.5.0
@@ -25,7 +28,7 @@ services:
 before_install:
   # Chrome driver
   - google-chrome-stable --headless --no-sandbox --remote-debugging-port=9222 http://localhost &
-  - wget http://chromedriver.storage.googleapis.com/2.34/chromedriver_linux64.zip
+  - wget http://chromedriver.storage.googleapis.com/2.36/chromedriver_linux64.zip
   - unzip chromedriver_linux64.zip
   - sudo cp chromedriver /usr/local/bin/.
   - sudo chmod +x /usr/local/bin/chromedriver
