--- a/spec/fixtures/virtual_competitions.yml
+++ b/spec/fixtures/virtual_competitions.yml
@@ -4,6 +4,7 @@ base_race:
   place: hellesylt
   finish_line: hellesylt
   jumps_kind: base
+  interval_type: annual
   period_from: 2015-01-01
   period_to: 2020-01-01
   discipline: base_race
@@ -15,6 +16,7 @@ distance_in_time:
   group: main
   jumps_kind: base
   suits_kind: wingsuit
+  interval_type: annual
   period_from: 2015-01-01
   period_to: 2020-01-01
   discipline: distance_in_time
