--- a/spec/fixtures/virtual_competitions.yml
+++ b/spec/fixtures/virtual_competitions.yml
@@ -8,6 +8,7 @@ base_race:
   period_from: 2015-01-01
   period_to: 2020-01-01
   discipline: base_race
+  results_sort_order: ascending
   display_highest_speed: true
   display_highest_gr: true
 
@@ -20,4 +21,5 @@ distance_in_time:
   period_from: 2015-01-01
   period_to: 2020-01-01
   discipline: distance_in_time
+  results_sort_order: descending
   discipline_parameter: 20
