--- a/spec/fixtures/places.yml
+++ b/spec/fixtures/places.yml
@@ -3,3 +3,9 @@ hellesylt:
   country: norway
   latitude: 62.057917
   longitude: 6.971847
+
+loen:
+  name: Loen
+  country: norway
+  latitude: 61.88504129
+  longitude: 6.83213621
