--- a/spec/fixtures/tournaments.yml
+++ b/spec/fixtures/tournaments.yml
@@ -10,6 +10,7 @@ world_base_race:
   exit_lat: 62.0578307
   exit_lon: 6.9715718
   has_qualification: false
+  bracket_size: 2
 
 qualification_loen:
   name: WBR Qualification - Loen
@@ -23,3 +24,4 @@ qualification_loen:
   exit_lat: 61.88504129
   exit_lon: 6.83213621
   has_qualification: true
+  bracket_size: 2
