fix order and tests

--- a/spec/fixtures/event/results.yml
+++ b/spec/fixtures/event/results.yml
@@ -1,13 +1,13 @@
 # Event 1, Speed Distance Time
 distance_competitor_1:
-  competitor: competitor_1
-  round: distance_round_1
+  competitor_id: 1
+  round_id: 1
   result: 3000
   result_net: 2900
 
 speed_competitor_1:
-  competitor: competitor_1
-  round: speed_round_1
+  competitor_id: 1
+  round_id: 2
   result: 250
   result_net: 240
   penalized: true
@@ -15,13 +15,13 @@ speed_competitor_1:
   penalty_reason: Lane violation
 
 distance_competitor_2:
-  competitor: competitor_2
-  round: distance_round_1
+  competitor_id: 2
+  round_id: 1
   result: 2500
   result_net: 2400
 
 speed_competitor_2:
-  competitor: competitor_2
-  round: speed_round_1
+  competitor_id: 2
+  round_id: 2
   result: 270
   result_net: 265
