--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ REDIS_DB: 12
 MAPS_API_KEY: AIzaSyBK52NrEXWYjmGLRkKOpjndjDxuT4PuB8U
 HONEYBADGER_API_KEY: 'your_key'
 TRACK_SCANNER_URL: http://track-scanner.herokuapp.com
+FB_APP_ID: 123123123123
+FB_APP_SECRET: 4f1d0e1234a26a5f5a51fd121f8c0dd7
