Satisfy rubocop in spec directory

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,6 +10,11 @@ AllCops:
     - db/schema.rb
     - lib/**/*
 
+#################### Rails   ###############################
+Rails/SkipsModelValidations:
+  Exclude:
+    - spec/**/*
+
 #################### Style   ###############################
 Style/Lambda:
   Enabled: false
