--- a/spec/fixtures/event/results.yml
+++ b/spec/fixtures/event/results.yml
@@ -4,6 +4,7 @@ distance_competitor_1:
   round_id: 1
   result: 3000
   result_net: 2900
+  created_at: 2018-01-01 12:00:00
 
 speed_competitor_1:
   competitor_id: 1
@@ -13,15 +14,18 @@ speed_competitor_1:
   penalized: true
   penalty_size: 20
   penalty_reason: Lane violation
+  created_at: 2018-01-01 12:01:00
 
 distance_competitor_2:
   competitor_id: 2
   round_id: 1
   result: 2500
   result_net: 2400
+  created_at: 2018-01-01 12:03:00
 
 speed_competitor_2:
   competitor_id: 2
   round_id: 2
   result: 270
   result_net: 265
+  created_at: 2018-01-01 12:05:00
