--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "dependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/preset-env": "^7.5.5",
     "@google/markerclusterer": "^1.0.3",
     "@rails/webpacker": "^4.0.0-rc.8",
     "@stimulus/polyfills": "^1.1.1",
@@ -7,6 +14,7 @@
     "bootstrap": "^3.4.1",
     "bootstrap-datepicker": "^1.7.1",
     "core-js": "3",
+    "geodesy": "^2.2.0",
     "highcharts": "^6.0.7",
     "honeybadger-js": "^0.5.5",
     "jquery": "^3.3.1",
@@ -16,16 +24,10 @@
     "rails-ujs": "^5.1.5",
     "select2": "^4.0.3",
     "stimulus": "^1.0.1",
+    "styled-components": "^4.3.2",
     "turbolinks": "^5.1.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-react-jsx": "^7.3.0",
-    "@babel/preset-env": "^7.5.5",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.15.3",
     "eslint-config-prettier": "^4.3.0",
