WIP: Rewrite round map on preact

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "jquery-validation": "^1.17.0",
     "preact": "^10.0.0-rc.1",
     "rails-ujs": "^5.1.5",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "select2": "^4.0.3",
     "stimulus": "^1.0.1",
     "styled-components": "^4.3.2",
