--- a/config/i18n-js.yml
+++ b/config/i18n-js.yml
@@ -30,4 +30,4 @@ fallbacks: :en
 
 translations:
   - file: "app/assets/javascripts/i18n/translations.js"
-    only: ['*.events.show.*', '*.tracks.form.*', '*.tracks.edit.*', '*.tracks.show.*', '*.places.index.*', '*.units.*', '*.charts.*', '*.errors.messages.*', '*.jquery_validate.*']
+    only: ['*.events.*', '*.tracks.form.*', '*.tracks.edit.*', '*.tracks.show.*', '*.places.index.*', '*.units.*', '*.charts.*', '*.errors.messages.*', '*.jquery_validate.*']
