--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "jquery": "^3.3.1",
     "jquery-jcrop": "^0.9.13",
     "jquery-validation": "^1.17.0",
-    "preact": "^10.0.0-rc.1",
     "rails-ujs": "^5.1.5",
+    "react": "^16.9",
+    "react-dom": "^16.9",
     "react-redux": "^7.1.1",
+    "react-select": "^3.0.4",
+    "react-select-async-paginate": "^0.3.7",
     "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "select2": "^4.0.3",
     "stimulus": "^1.0.1",
