--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@rails/webpacker": "^4.0.0-rc.8",
     "@stimulus/polyfills": "^1.1.1",
     "actioncable": "^5.2.0",
+    "axios": "^0.19.0",
     "bootstrap": "^3.4.1",
     "bootstrap-datepicker": "^1.7.1",
     "core-js": "3",
