--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,5 @@
 require: rubocop-rails
 
-Documentation:
-  Enabled: false
-
 Rails:
   Enabled: true
 
@@ -39,6 +36,9 @@ Style/ClassAndModuleChildren:
   Enabled: false
 
 Style/FormatStringToken:
+  Enabled: false
+
+Style/Documentation:
   Enabled: false
 
 #################### Lint    ################################
