--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "lodash.debounce": "^4.0.8",
     "postcss-loader": "^3.0.0",
     "react": "^16.9",
+    "react-device-detect": "^1.11.14",
     "react-dom": "^16.9",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "react-select": "^3.0.8",
     "react-select-async-paginate": "^0.3.7",
     "redux": "^4.0.4",
@@ -54,6 +56,7 @@
     "eslint-plugin-react-hooks": "^2.0.1",
     "prettier": ">=1.13.0",
     "webpack": "^4.41",
+    "react-svg-loader": "^3.0.3",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.8.0"
   }
