--- a/package.json
+++ b/package.json
@@ -17,7 +17,14 @@
     ],
     "moduleDirectories": [
       "node_modules",
-      "app/javascript"
+      "app/javascript",
+      "spec/javascript"
+    ],
+    "moduleNameMapper": {
+       "\\.svg$": "<rootDir>/spec/javascript/jest/mocks/fileMock.js"
+    },
+    "transformIgnorePatterns": [
+      "/node_modules/(?!geodesy)"
     ]
   },
   "dependencies": {
@@ -46,6 +53,7 @@
     "geodesy": "^2.2.0",
     "highcharts": "^6.0.7",
     "honeybadger-js": "^0.5.5",
+    "i18n-js": "^3.5.1",
     "immer": "^5.0.0",
     "jquery": "^3.3.1",
     "jquery-jcrop": "^0.9.13",
@@ -70,6 +78,8 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.8.3",
+    "@testing-library/jest-dom": "^5.1.0",
+    "@testing-library/react": "^9.4.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.9.0",
     "eslint": "^7.6.0",
