--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,6 +100,18 @@ jobs:
       - run: bundle exec rails assets:precompile
       - run: bundle exec rspec spec --tag type:system
 
+  test_js:
+    working_directory: ~/skyderby
+    docker:
+      - image: circleci/ruby:3.0.0-node
+    steps:
+      - checkout
+      - *restore_yarn_cache
+      - run: yarn install
+      - *save_yarn_cache
+      - run: yarn test --maxWorkers=2
+
+
 workflows:
   version: 2
   lint_test_build:
