--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
   "dependencies": {
     "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
+    "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
-    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
     "@google/markerclusterer": "^1.0.3",
     "@rails/webpacker": "^4.0.0-rc.8",
     "@stimulus/polyfills": "^1.1.1",
     "actioncable": "^5.2.0",
     "axios": "^0.19.0",
+    "babel-loader": "^8.0.6",
     "bootstrap": "^3.4.1",
     "bootstrap-datepicker": "^1.7.1",
     "core-js": "3",
+    "css-loader": "^2.1.1",
     "formik": "^2.0.1-rc.13",
     "geodesy": "^2.2.0",
     "highcharts": "^6.0.7",
@@ -23,6 +28,8 @@
     "jquery": "^3.3.1",
     "jquery-jcrop": "^0.9.13",
     "jquery-validation": "^1.17.0",
+    "lodash.debounce": "^4.0.8",
+    "postcss-loader": "^3.0.0",
     "rails-ujs": "^5.1.5",
     "react": "^16.9",
     "react-dom": "^16.9",
@@ -46,7 +53,7 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.0.1",
     "prettier": ">=1.13.0",
-    "webpack": "^4.0.0",
+    "webpack": "^4.41",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.8.0"
