--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@babel/preset-react": "^7.8.3",
     "@google/markerclusterer": "^1.0.3",
     "@rails/webpacker": "^4.0.0-rc.8",
+    "@rails/actioncable": "^6.0.2",
+    "@rails/ujs": "^6.0.2",
     "@stimulus/polyfills": "^1.1.1",
-    "actioncable": "^5.2.0",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "bootstrap": "^3.4.1",
@@ -30,7 +31,6 @@
     "jquery-validation": "^1.17.0",
     "lodash.debounce": "^4.0.8",
     "postcss-loader": "^3.0.0",
-    "rails-ujs": "^5.1.5",
     "react": "^16.9",
     "react-dom": "^16.9",
     "react-redux": "^7.1.1",
