Redirect to proper controller in online rankings throw parent controller

--- a/config/database.yml
+++ b/config/database.yml
@@ -2,6 +2,7 @@ production: &default
   adapter: postgresql
   database: <%= ENV['DB_NAME'] %>
   host:     <%= ENV['DB_HOST'] %>
+  port:     <%= ENV['DB_PORT'] || 5432 %>
   username: <%= ENV['DB_USERNAME'] %>
   password: <%= ENV['DB_PASSWORD'] %>
   encoding: utf8
