--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "dependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.8.7",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/cli": "^7.10.3",
+    "@babel/core": "^7.10.3",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-react-jsx": "^7.3.0",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.8.3",
+    "@babel/plugin-transform-react-jsx": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-react": "^7.10.1",
     "@google/markerclusterer": "^1.0.3",
-    "@rails/webpacker": "^4.0.0-rc.8",
     "@rails/actioncable": "^6.0.2",
     "@rails/ujs": "^6.0.2",
+    "@rails/webpacker": "^4.0.0-rc.8",
     "@stimulus/polyfills": "^1.1.1",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "bootstrap": "^3.4.1",
     "bootstrap-datepicker": "^1.7.1",
-    "core-js": "3",
+    "core-js": "^3.6.5",
     "css-loader": "^2.1.1",
     "formik": "^2.0.1-rc.13",
     "geodesy": "^2.2.0",
