Tracks/Edit cover page loading by tests

--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     },
     "transformIgnorePatterns": [
       "/node_modules/(?!geodesy)"
+    ],
+    "testURL": "http://skyderby.test",
+    "setupFilesAfterEnv": [
+      "<rootDir>/spec/javascript/jest/setup.js"
     ]
   },
   "dependencies": {
@@ -85,6 +89,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^4.0.1",
     "jest": "^26.0",
+    "nock": "^13.0.4",
     "prettier": "^2.0",
     "react-refresh": "^0.8.3",
     "react-svg-loader": "^3.0.3",
