--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@rails/ujs": "^6.0.2",
     "@rails/webpacker": "=5.1.1",
     "@stimulus/polyfills": "^1.1.1",
-    "axios": "^0.21.1",
+    "axios": "^0.19.0",
     "babel-loader": "^8.1.0",
     "bootstrap": "^3.4.1",
     "bootstrap-datepicker": "^1.7.1",
@@ -62,6 +62,7 @@
     "jquery": "^3.3.1",
     "jquery-jcrop": "^0.9.13",
     "jquery-validation": "^1.19.3",
+    "js-cookie": "^2.2.1",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "lodash.merge": "^4.6.2",
@@ -105,6 +106,8 @@
     "react-svg-loader": "^3.0.3",
     "webpack": "^4.41",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "^3.8.0",
+    "webpack-virtual-modules": "^0.3.0",
+    "yaml-js": "^0.2.3"
   }
 }
