--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "jquery": "^3.3.1",
     "jquery-jcrop": "^0.9.13",
     "jquery-validation": "^1.17.0",
+    "js-cookie": "^2.2.1",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "lodash.merge": "^4.6.2",
@@ -105,6 +106,8 @@
     "react-svg-loader": "^3.0.3",
     "webpack": "^4.41",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "^3.8.0",
+    "webpack-virtual-modules": "^0.3.0",
+    "yaml-js": "^0.2.3"
   }
 }
