--- a/package.json
+++ b/package.json
@@ -61,11 +61,12 @@
     "@rails/actioncable": "^6.0.2",
     "@rails/ujs": "^6.0.2",
     "@rails/webpacker": "=5.1.1",
-    "@reduxjs/toolkit": "^1.4.0",
+    "@reduxjs/toolkit": "^1.5.0",
     "@stimulus/polyfills": "^1.1.1",
     "autoprefixer": "^10.0.1",
     "axios": "^0.19.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^3.4.1",
     "bootstrap-datepicker": "^1.7.1",
     "clsx": "^1.1.1",
@@ -76,7 +77,6 @@
     "highcharts": "^6.2.0",
     "honeybadger-js": "^0.5.5",
     "i18n-js": "^3.5.1",
-    "immer": "^5.0.0",
     "jquery": "^3.3.1",
     "jquery-jcrop": "^0.9.13",
     "jquery-validation": "^1.19.3",
@@ -117,7 +117,6 @@
     "babel-jest": "^26.0.1",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-jest": "^23.10.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
