--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,7 +3,8 @@ require:
   - rubocop-performance
 
 AllCops:
-  TargetRubyVersion: 2.6
+  TargetRubyVersion: 3.0
+  NewCops: enable
   Exclude:
     - bin/*
     - db/**/*
@@ -73,3 +74,6 @@ Metrics/BlockLength:
     - app/views/**/*.json.jbuilder
     - config/**/*
     - spec/**/*
+
+Naming/VariableNumber:
+  Enabled: false # TODO: Enable
